<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/popup_background">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_sortByDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SortByDate"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />

        <Spinner
            android:id="@+id/sr_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_sortByDate"
            android:layout_marginTop="4dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"></Spinner>

    </LinearLayout>

<LinearLayout
    android:orientation="vertical"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/linearLayout1"
    android:layout_marginTop="20dp"
    >

    <TextView
        android:id="@+id/tv_sortByPrice"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/SortByPrice"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

<Spinner
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/tv_sortByPrice"
    android:id="@+id/sr_price"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="4dp"></Spinner>

</LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        >

        <TextView
            android:id="@+id/tv_sortByYear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/SortByYear"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_sortByYear"
            android:id="@+id/sr_year"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="4dp"></Spinner>

    </LinearLayout>



</RelativeLayout>