<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:layout_marginBottom="10dp"
    android:id="@+id/cv_rowItems"
    app:cardElevation="5dp"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3.7">

        <RelativeLayout
            android:id="@+id/rl_carPhoto"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.7">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_carImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/light"

                    />

            </RelativeLayout>

            <ImageButton
                android:id="@+id/ib_favoriteCar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/ic_favorite_negative"
                />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:weightSum="2.5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:orientation="vertical"
                android:layout_marginBottom="5dp">

                <TextView
                    android:id="@+id/tv_carModel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="jeep cherokee 2018"
                    android:textColor="@color/textViews"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:id="@+id/tv_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1200000"
                        android:textSize="16sp"
                        android:textColor="#5db25d" />

                    <TextView
                        android:id="@+id/tv_currency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/tv_price"
                        android:gravity="top|left"
                        android:text="LE"
                        android:layout_marginRight="3dp"
                        android:layout_marginLeft="3dp"
                        android:textColor="@color/gray"
                        android:textSize="10sp"
                        android:layout_toRightOf="@+id/tv_price" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3.5"
                android:paddingBottom="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Lot"
                        android:textSize="12sp"
                        />

                    <TextView
                        android:id="@+id/tv_lot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="5555555"
                        android:textStyle="bold"
                        android:textColor="@color/textViews"/>
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/darker_gray"
                    android:layout_marginRight="3dp"
                    android:layout_marginLeft="3dp"
                    />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Bids"
                        android:textSize="12sp"
                        />

                    <TextView
                        android:id="@+id/tv_bids"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textViews"
                        android:textSize="12sp"
                        android:text="5555555"
                        android:textStyle="bold"/>

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/darker_gray"
                    android:layout_marginRight="3dp"
                    android:layout_marginLeft="3dp"
                    />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/TimeLeft"
                        android:textSize="12sp"/>

                    <TextView
                        android:id="@+id/tv_timeLeft"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="00:00:00"
                        android:textColor="@color/textViews"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>